Customized the appearance of the blog.

--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -5,6 +5,8 @@
 //$sans: "Optima", sans-serif;
 //$serif: "Baskerville", serif;
 //$mono: "Courier", monospace;
-//$heading-font-family: "Verdana", sans-serif;
+//$heading-font-family: "Permanent Marker", Georgia, cursive;
+$header-title-font-family: "Permanent Marker", Georgia, cursive;
+$header-subtitle-font-family: "Permanent Marker", Georgia, cursive;
 //$header-title-font-family: "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
