--- a/sass/custom/_colors.scss
+++ b/sass/custom/_colors.scss
@@ -2,21 +2,38 @@
 // To give it a try, uncomment some of the lines below rebuild your blog, and see how it works.
 // If you need a handy color picker try http://hslpicker.com
 
-//$header-bg: #263347;
+$light-background: #FDFCFB;
+$red-foreground: #B22414;
+$ocean: #52A9B2;
+$hoffas-grave: #AF9677;
+
+$light-gray: #fafafa;
+$darker-gray: darken(#eaeaea, 15);
+$dark-gray: #777;
+
+$header-bg: $light-background;
 //$subtitle-color: lighten($header-bg, 58);
-//$nav-bg: desaturate(lighten(#8fc17a, 18), 5);
-//$nav-bg-front: image-url('noise.png');
-//$nav-bg-back: linear-gradient(lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11));
-//$sidebar-bg: desaturate(#eceff5, 8);
+$nav-bg: desaturate(lighten($darker-gray, 18), 5);
+//$nav-bg: $dark-gray;
+$nav-bg-front: image-url('noise.png');
+$nav-bg-back: linear-gradient(lighten($nav-bg, 8), $nav-bg, darken($nav-bg, 11));
+//$nav-bg-back: linear-gradient($light-gray, $darker-gray);
+$sidebar-bg: desaturate($light-background, 8);
 //$sidebar-link-color: saturate(#526f9a, 10);
 //$sidebar-link-color-hover: darken(#7ab662, 9);
-//$footer-bg: #ccc !default;
-//$footer-bg-front: image-url('noise.png');
-//$footer-bg-back: linear-gradient(lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11));
+$footer-bg: lighten($darker-gray, 15) !default;
+$footer-bg-front: image-url('noise.png');
+$footer-bg-back: linear-gradient(lighten($footer-bg, 8), $footer-bg, darken($footer-bg, 11));
+
+$page-bg: $light-background;
+$main-bg: $light-background;
+
+$title-color: $red-foreground;
+$subtitle-color: darken($ocean, 15);
 
 
 /* To use the light Solarized highlighting theme uncomment the following line */
-//$solarized: light;
+$solarized: light;
 
 /* If you want to tweak the Solarized colors you can do that here */
 //$base03:          #002b36; //darkest blue
