--- a/sass/custom/_layout.scss
+++ b/sass/custom/_layout.scss
@@ -6,7 +6,7 @@
 //$header-padding-bottom: 1.5em;
 
 //$max-width: 1350px;
-//$indented-lists: true;
+$indented-lists: true;
 
 // Padding used for layout margins
 //$pad-min: 18px;
@@ -19,3 +19,10 @@
 //$sidebar-pad-medium: 15px;
 //$sidebar-pad-wide: 20px;
 //$sidebar-width-wide: 300px;
+
+#about {
+  .avatar {
+    text-align: center;
+    margin-top: 1.5em;
+  }
+}
