New header font

--- a/sass/custom/_fonts.scss
+++ b/sass/custom/_fonts.scss
@@ -6,7 +6,7 @@
 //$serif: "Baskerville", serif;
 //$mono: "Courier", monospace;
 //$heading-font-family: "Permanent Marker", Georgia, cursive;
-$header-title-font-family: "Permanent Marker", Georgia, cursive;
-$header-subtitle-font-family: "Permanent Marker", Georgia, cursive;
+$header-title-font-family: Lato, Georgia, cursive;
+$header-subtitle-font-family: Lato, Georgia, cursive;
 //$header-title-font-family: "Futura", sans-serif;
 //$header-subtitle-font-family: "Futura", sans-serif;
